------------------------------------------------------------------------------
  qSharp 2.0 [2014.04.02]
------------------------------------------------------------------------------

  - Support for kdb+ protocol and types: v3.0, v2.6, v<=2.5
  - Synchronous and asynchronous queries
  - Convenient asynchronous callbacks mechanism
  - Logging of the raw protocol data in case of parsing failure. 