@@ -132,6 +132,8 @@ ED00000080
 630B0001000000610006000100000001000000
 1 2!`abc`cdefgh
 6306000200000001000000020000000B00020000006162630063646566676800
+`abc`def`gh!([] one: 1 2 3; two: 4 5 6)
+630B000300000061626300646566006768006200630B00020000006F6E650074776F00000002000000070003000000010000000000000002000000000000000300000000000000070003000000040000000000000005000000000000000600000000000000
 (1;2h;3.3;"4")!(`one;2 3;"456";(7;8 9))
 63000004000000FA01000000FB0200F76666666666660A40F634000004000000F56F6E650006000200000002000000030000000A0003000000343536000002000000FA070000000600020000000800000009000000
 (0 1; 2 3)!`first`second
