@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  qSharp 2.0.1 [2014.05.26]
+------------------------------------------------------------------------------
+
+  - Fix: creation of q dictionary with values represented as table
+
+------------------------------------------------------------------------------
   qSharp 2.0 [2014.04.02]
 ------------------------------------------------------------------------------
 
